--- a/ezchatv2/Pages/Shared/_Layout.cshtml
+++ b/ezchatv2/Pages/Shared/_Layout.cshtml
@@ -1,12 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Chat";
 }
+@model IndexModel
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ezchat</title>
+    <!--<title>ezchat</title>-->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -14,19 +15,22 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">EZ Chat v2</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">@ViewData["siteName"]</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div>
-                    <input type="button" onclick="window.location.href='https://google.com';" value="ESCAPE!" style="background-color:darkred; color:white;" />
+                <div style="float:left">
+                    <input type="button" onclick="window.location.href='@ViewData["escapeLink"]';" value="ESCAPE!" style="background-color:darkred; color:white;" />
                 </div>
+                <!--<div style="float:right; display:flex; align-items:center;">
+                    <p style="font-size: 20px; font-style: italic;">@ViewData["motd"]</p>
+                </div>-->
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <!--<li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Chat</a>
-            </li>-->
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Chat</a>
+                        </li>-->
                     </ul>
                 </div>
             </div>
