--- a/ezchatv2/Pages/Shared/_Layout.cshtml
+++ b/ezchatv2/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            ezchatv2 revision 5 &copy; 2021 - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            EZchat revision 6 &copy; Nevadex 2021 - <a href="https://github.com/nevadex/ezchat" target="_blank">Github</a> - <a asp-area="" asp-page="/License">License</a>
         </div>
     </footer>
 
