secured admin mode, fixed some things

--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -99,7 +99,7 @@
     <h5 style="font-size: 15px;"><br />Manage bans:</h5>
     <p id="admin-banList">Banned UIDs: []</p>
     <input type="button" class="buttonTest" id="admin-refreshBanlistButton" value="Refresh" style="display: inline;" />
-    <input type="button" class="buttonTest" id="admin-reconButton" value="Reconnect" style="display: inline;" />
+    <input type="button" class="buttonTest" id="admin-reconButton" value="Reconnect" style="display: inline;" disabled/>
     <br />
     <input type="text" id="admin-banInput" placeholder="Enter UID..." />
     <input type="button" id="admin-banButton" value="Ban!" style="background-color: darkred; color: white; display: inline;" />
