new admin commands and appcheck

--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -106,8 +106,8 @@
 
     <h5 style="font-size: 15px;"><br />Manage bans</h5>
     <p id="admin-banList">Banned UIDs: []</p>
-    <input type="button" class="buttonTest" id="admin-refreshBanlistButton" value="Refresh" style="display: inline;" />
-    <input type="button" class="buttonTest" id="admin-reconButton" value="Reconnect" style="display: inline;" disabled />
+    <input type="button" class="buttonAdminSmall" id="admin-refreshBanlistButton" value="Refresh" style="display: inline;" />
+    <input type="button" class="buttonAdminSmall" id="admin-reconButton" value="Reconnect" style="display: inline;" disabled />
     <br />
     <input type="text" id="admin-banInput" placeholder="Enter UID..." />
     <input type="button" id="admin-banButton" value="Ban!" style="background-color: darkred; color: white; display: inline;" />
@@ -120,7 +120,7 @@
     <input type="button" class="buttonAdminSmall" id="admin-reloadConfig" value="Reload Config" />
     <input type="button" class="buttonAdminSmall" id="admin-refreshAllClients" value="Refresh All Clients" />
     <input type="button" class="buttonAdminSmall" id="admin-changeMotd" value="Change MOTD" />
-    <input type="button" class="buttonAdminSmall" id="admin-pauseChat" value="Pause Chat" style="background-color: yellow;" />
+    <input type="button" class="buttonAdminSmall" id="admin-pauseChat" value="Pause Chat" />
     <input type="button" class="buttonAdminSmall" id="admin-stopChat" value="Stop Chat" style="background-color: darkred; color: white;" />
 
     <hr />
