--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -200,3 +200,4 @@
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat/chat.js"></script>
 <script src="~/js/chat/admin.js"></script>
+<script src="~/js/chat/filter.js"></script>
