new settings menu

--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -174,7 +174,8 @@
                                 <div class="row"><br /></div>
                             </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <p class="text-muted" style="margin-right: auto; margin-top: auto; margin-bottom: auto; font-size: 12px;" >Your settings will save when you click 'Close'</p>
+                                    <button type="button" class="btn btn-success" data-dismiss="modal" id="settingsModalCloseButton">Close</button>
                                     <!--<button type="button" class="btn btn-primary">Save changes</button>-->
                                 </div>
                             </div>
@@ -225,6 +226,7 @@
         </div>
     </div>
 </div>
+<script src="~/lib/jquery/dist/jquery.js"></script>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat/chat.js"></script>
 <script src="~/js/chat/admin.js"></script>
