--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -126,6 +126,14 @@
     <hr />
 </div>
 
+<div class="row">
+    <div class="col-6">
+        <div id="messagesListDiv" style="display: flex; flex-direction: column;">
+            <ul id="messagesList" style="flex-grow: 1; overflow: auto;"></ul>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <div>
         <div>
@@ -219,13 +227,14 @@
 </div>
 
 
-<div class="row">
+<!--<div class="row">
     <div class="col-6">
         <div id="messagesListDiv" style="display: flex; flex-direction: column;">
             <ul id="messagesList" style="flex-grow: 1; overflow: auto;"></ul>
         </div>
     </div>
-</div>
+</div>-->
+
 <script src="~/lib/jquery/dist/jquery.js"></script>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat/chat.js"></script>
