--- a/ezchatv2/wwwroot/css/site.css
+++ b/ezchatv2/wwwroot/css/site.css
@@ -69,3 +69,16 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*loading overlay*/
+div.loading-overlay {
+    opacity: 1;
+    filter: alpha(opacity=20);
+    background-color: #224947;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    position: fixed;
+}
