dark mode and etc i forgor

--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -66,21 +66,21 @@
                         <div class="modal-body">
                             <div class="container">
                                 <div class="row">
-                                    <div class="custom-control custom-switch" >
+                                    <div class="custom-control custom-switch">
                                         <input type="checkbox" class="custom-control-input" id="ttsMode">
                                         <label class="custom-control-label" for="ttsMode">TTS Mode</label>
                                     </div>
                                 </div>
                                 <div class="row"><br /></div>
                                 <div class="row">
-                                    <div class="custom-control custom-switch" >
+                                    <div class="custom-control custom-switch">
                                         <input type="checkbox" class="custom-control-input" id="filterMode">
                                         <label class="custom-control-label" for="filterMode">Profanity Filter</label>
                                     </div>
                                 </div>
                                 <div class="row"><br /></div>
                                 <div class="row">
-                                    <div class="custom-control custom-switch" >
+                                    <div class="custom-control custom-switch">
                                         <input type="checkbox" class="custom-control-input" id="showUidsMode">
                                         <label class="custom-control-label" for="showUidsMode">Show UIDs</label>
                                     </div>
@@ -95,6 +95,13 @@
                                 <div class="row"><br /></div>
                                 <div class="row" id="clearMsgDiv">
                                     <input type="button" class="btn btn-outline-warning" id="clearMsgList" value="Clear Messages" />
+                                </div>
+                                <div class="row"><br /></div>
+                                <div class="row">
+                                    <div class="custom-control custom-switch" id="darkModeDiv">
+                                        <input type="checkbox" class="custom-control-input" id="darkMode">
+                                        <label class="custom-control-label" for="darkMode">Dark Mode</label>
+                                    </div>
                                 </div>
                                 <div class="row"><br /></div>
                             </div>
