--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -129,6 +129,7 @@
             <div class="col-6">
                 <input class="form-control" type="text" id="messageInput" placeholder="Message" />
                 <div id="messageInputFeedback"></div>
+                <div class="card-deck" id="messageInputCardDeck"></div>
             </div>
         </div>
         <div class="row">&nbsp;</div>
