--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -130,6 +130,7 @@
                 <input class="form-control" type="text" id="messageInput" placeholder="Message" />
                 <div id="messageInputFeedback"></div>
                 <div class="card-deck" id="messageInputCardDeck"></div>
+                <div id="fileUploadFeedback" class="invalid-feedback"></div>
             </div>
         </div>
         <div class="row">&nbsp;</div>
