--- a/ezchatv2/Pages/Index.cshtml
+++ b/ezchatv2/Pages/Index.cshtml
@@ -191,10 +191,17 @@
     </div>
 </div>
 
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script src="~/js/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chat/start.js"></script>
-<script src="~/js/chat/chat.js"></script>
-<script src="~/js/chat/admin.js"></script>
-<script src="~/js/chat/filter.js"></script>
-<script src="~/js/chat/fs.js"></script>
+<environment include="Development">
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/chat/start.js"></script>
+    <script src="~/js/chat/chat.js"></script>
+    <script src="~/js/chat/admin.js"></script>
+    <script src="~/js/chat/filter.js"></script>
+    <script src="~/js/chat/fs.js"></script>
+</environment>
+<environment exclude="Development">
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/signalr/dist/browser/signalr.min.js"></script>
+    <script src="~/js/site.js"></script>
+</environment>
