--- a/ezchatv2/Pages/Shared/_Layout.cshtml
+++ b/ezchatv2/Pages/Shared/_Layout.cshtml
@@ -56,6 +56,8 @@
         </div>
     </footer>
 
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
